--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Lists#index</h1>
 <p>Find me in app/views/lists/index.html.erb</p>
+
+<%= link_to "Add a new list",  new_list_path %>
+
+<% @lists.each do |l|%>
+<h2><%= l.name %></h2>
+<% end %>
